# CleanRoute.

./: Readme.MD
backend/: .gitignore  Flow.MD  pyproject.toml  test_case_1.json
backend/agent_builder/: use_case_call.py
backend/agent_v1/agents/: analyzer.py  question_gen.py  validator.py
backend/agent_v1/export/: csv_writer.py
backend/agent_v1/graph/: graph.py
backend/agent_v1/hitl/: review.py
backend/agent_v1/prompts/: prompts.py
backend/agent_v1/tools/: web_search.py
backend/api/routes/: chatbot.py
backend/chroma_autotune/: chroma.sqlite3
backend/migrations/models/: 0_20260222112157_init.py
backend/outputs/: batch-8877_20260222_035329.csv  test-batch-001_20260221_193926.csv  test-batch-001_20260222_014456.csv
backend/pipeline/: retriver.py
backend/rag_pipeline/: embeddings.py  vector_store.py
backend/zip/agent_builder/: rag_model.py
backend/zip/agent_v1/agents/: link_fetcher.py  sampler.py
backend/zip/agent_v1/graph/: app.py  states.py
backend/zip/api/: main.py
backend/zip/api/routes/: chatbot.py  pipeline1.py  pipeline2.py  test.py
backend/zip/db/: config.py  models.py
backend/zip/outputs/: batch-5553_20260222_102838.csv  batch-6532_20260222_083025.csv
backend/zip/pipeline/: ingest_csv.py
backend/zip/prompts/: prompts_v1.py
